add bootstrap and font awesome

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,15 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/3c0364d6bf.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <app-root></app-root>
+    <pm-root></pm-root>
   </body>
 </html>
-
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
